--- a/idex.html
+++ b/idex.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </button>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
