add #headerwrap and background image

--- a/idex.html
+++ b/idex.html
@@ -30,6 +30,24 @@
         </div>
     </div>
 </nav>
+<div id="headerwrap">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h1>Bootstrap rules</h1>
+                <h2>Bootstrap sites are cool</h2>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container w">
+    <div class="row centered">
+        <br><br>
+        <div class="col-lg-4">
+            <i class="fa fa-heart"></i>
+        </div>
+    </div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
