add #portfolio and 3 images

--- a/idex.html
+++ b/idex.html
@@ -40,12 +40,59 @@
         </div>
     </div>
 </div>
-<div class="container w">
+<div class="container content">
     <div class="row centered">
         <br><br>
         <div class="col-lg-4">
             <i class="fa fa-heart"></i>
+            <h4>Design</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate eaque enim eos illum labore
+                magni praesentium rem repellendus saepe. Ad ex fugit non saepe. Ea maiores nobis repellendus
+                tempore.</p>
         </div>
+        <div class="col-lg-4">
+            <i class="fa fa-laptop"></i>
+            <h4>Computers</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate eaque enim eos illum labore
+                magni praesentium rem repellendus saepe. Ad ex fugit non saepe. Ea maiores nobis repellendus
+                tempore.</p>
+        </div>
+        <div class="col-lg-4">
+            <i class="fa fa-trophy"></i>
+            <h4>Help</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem cupiditate eaque enim eos illum labore
+                magni praesentium rem repellendus saepe. Ad ex fugit non saepe. Ea maiores nobis repellendus
+                tempore.</p>
+        </div>
+    </div>
+    <br><br>
+</div>
+<div id="portfolio">
+    <div class="container">
+        <div class="row centered">
+            <h4>Last works</h4>
+            <br>
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <img src="assets/img/p01.png"><a href="#"></a></img>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <img src="assets/img/p02.png"><a href="#"></a></img>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="tilt">
+                    <img src="assets/img/p03.png"><a href="#"></a></img>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container wb">
+    <div class="row centered">
+
     </div>
 </div>
 
