add block-bottom and footer

--- a/idex.html
+++ b/idex.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </div>
-</nav>
+ </nav>
 <div id="headerwrap">
     <div class="container">
         <div class="row centered">
@@ -92,11 +92,64 @@
 </div>
 <div class="container wb">
     <div class="row centered">
-
+        <br><br>
+        <div class="col-lg-8 col-lg-offset-2">
+            <h4>We create sites</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias, aliquam animi beatae consequatur
+                consequuntur dicta eaque esse ex in magnam odit placeat porro, quia, quibusdam quisquam repellat ut
+                voluptatem!</p>
+            <p><br><br></p>
+        </div>
+        <div class="col-lg-12 col-offset-1">
+            <img src="assets/img/munter.png" alt="" class="img-responsive">
+        </div>
+    </div>
+</div>
+<div id="partners">
+    <div class="container">
+        <div class="row centered">
+            <h4>Partners</h4>
+            <div class="col-lg-2 col-lg-offset-1">
+                <img src="assets/img/micro-logo.png" alt="">
+            </div>
+            <div class="col-lg-2">
+                <img src="assets/img/Apple-Logo.png" alt="">
+            </div>
+            <div class="col-lg-2">
+                <img src="assets/img/ubuntu-logo.png" alt="">
+            </div>
+            <div class="col-lg-2">
+                <img src="assets/img/tesla_logo.png" alt="">
+            </div>
+            <div class="col-lg-2">
+                <img src="assets/img/paypal-logo.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+<div id="bottom-block">
+    <div class="container">
+        <div class="row centered">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h4>Development of sites at a professional level</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab animi at autem, delectus dolor dolorem
+                    fugit hic id libero mollitia odit, omnis praesentium quam quis sint vel voluptates! Iure,
+                    maiores?</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="footer">
+    <div class="container">
+        <div class="row centered">
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-vk"></i></a>
+        </div>
     </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
