--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta charset="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -74,17 +74,17 @@
             <br>
             <div class="col-lg-4">
                 <div class="tilt">
-                    <img src="assets/img/p01.png"><a href="#"></a></img>
+                    <a href="#"><img src="assets/img/p01.png" alt="tablet"></a>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="tilt">
-                    <img src="assets/img/p02.png"><a href="#"></a></img>
+                    <a href="#"><img src="assets/img/p02.png" alt="tablet"></a>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="tilt">
-                    <img src="assets/img/p03.png"><a href="#"></a></img>
+                    <a href="#"><img src="assets/img/p03.png" alt="tablet"></a>
                 </div>
             </div>
         </div>
